--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,14 @@
         android:paddingTop="16dp"
         android:textSize="20sp" />
 
+    <Button
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="+"
+        android:onClick="doIncrement"/>
+
     <TextView
         android:id="@+id/quantity_text_view"
         android:layout_width="wrap_content"
@@ -24,6 +32,14 @@
         android:textColor="@android:color/black"
         android:paddingLeft="16dp"
         android:textSize="16sp" />
+
+    <Button
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:text="-"
+        android:onClick="doDecrement"/>
 
     <TextView
         android:layout_width="wrap_content"
