--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,20 +4,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/coffee">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="We are here to help you order your coffee!!"
+        android:textColor="@color/white"
+        android:paddingLeft="16dp"
+        android:textSize="34sp"
+        android:paddingTop="10dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Quantity"
+        android:textColor="@color/white"
         android:textAllCaps="true"
         android:paddingLeft="16dp"
         android:paddingBottom="16dp"
         android:paddingTop="16dp"
-        android:textSize="20sp" />
+        android:textSize="21sp" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
@@ -25,23 +35,22 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginLeft="16dp"
-            android:text="-"
-            android:onClick="doDecrement"/>
+            android:onClick="doDecrement"
+            android:text="-" />
 
         <TextView
             android:id="@+id/quantity_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="0"
-            android:textColor="@android:color/black"
             android:paddingLeft="16dp"
-            android:textSize="16sp" />
+            android:textSize="18sp" />
 
         <Button
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginBottom="16dp"
             android:text="+"
             android:onClick="doIncrement"/>
 
@@ -51,20 +60,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Price"
+        android:textColor="@color/white"
         android:textAllCaps="true"
         android:paddingLeft="16dp"
         android:paddingBottom="16dp"
         android:paddingTop="16dp"
-        android:textSize="20sp" />
+        android:textSize="21sp" />
 
     <TextView
         android:id="@+id/price_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="$0"
-        android:textColor="@android:color/black"
+        android:textColor="@color/white"
         android:paddingLeft="16dp"
-        android:textSize="16sp" />
+        android:textSize="18sp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -73,6 +83,5 @@
         android:layout_marginTop="16dp"
         android:text="ORDER"
         android:onClick="submitOrder"/>
-
 
 </LinearLayout>
