--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,8 @@
             android:hint="Enter your Name"
             android:textColor="@color/black"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="10dp"
+            android:inputType="textCapWords"/>
 
         <TextView
             android:layout_width="match_parent"
